# Beluga

./: .gitignore  Cargo.toml  README.md
.local/: en-croissant.readme
.rewrite-snapshot/: .gitignore  Cargo.toml  README.md
.rewrite-snapshot/.github/workflows/: ci.yml
.rewrite-snapshot/docs/: ARCHITECTURE.md  SELF_CRITIQUE.md  TUNING.md
.rewrite-snapshot/engine-core/src/: attacks.rs  bitboard.rs  eval.rs  perft.rs  see.rs  timeman.rs  tt.rs
.rewrite-snapshot/engine-core/tests/: tactics.rs
.rewrite-snapshot/engine-tune/: Cargo.toml
.rewrite-snapshot/engine-uci/: Cargo.toml
.rewrite-snapshot/engine-uci/src/: main.rs
.rewrite-snapshot/scripts/: gen_training_data.py  rewrite_history.py  selfplay.sh
.rewrite-snapshot/tools/: Cargo.toml
.rewrite-snapshot/tools/src/: bench.rs  perft.rs
docs/: DESIGN.md  ROADMAP.md
engine-core/: Cargo.toml
engine-core/src/: chess_move.rs  eval.rs  lib.rs  movegen.rs  nnue.rs  position.rs  search.rs  timeman.rs  types.rs  zobrist.rs
engine-core/tests/: invariants.rs  perft.rs  rules.rs  tactics.rs
engine-tune/src/: main.rs
engine-uci/src/: main.rs
engine-uci/tests/: uci.rs
engine-wasm/: Cargo.toml  README.md
engine-wasm/src/: lib.rs
scripts/: gui.sh  register_beluga_engine.py  run_tests.sh  selfplay.sh  setup_en_croissant.sh  sprt.sh
