[workspace]
resolver = "2"
members = [
    "engine-core",
    "engine-uci",
    "engine-tune",
    "tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Beluga authors"]
repository = "https://github.com/beluga-chess/beluga"
rust-version = "1.74"

[workspace.dependencies]
beluga-core = { path = "engine-core" }

# Release profile tuned for the engine: thin LTO + single codegen unit gives the
# best instruction scheduling on the hot search/movegen paths.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false

# A profile that keeps debug info for flamegraph/perf without losing optimization.
[profile.profiling]
inherits = "release"
debug = true
panic = "unwind"
