[package]
name = "beluga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beluga chess engine core: board, movegen, search, evaluation."

[lib]
name = "beluga_core"
path = "src/lib.rs"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[dev-dependencies]
proptest = "1"

[features]
default = []
# Enables expensive debug invariants (zobrist recompute checks, accumulator drift).
strict-asserts = []
