[package]
name = "beluga-uci"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beluga UCI executable."

[[bin]]
name = "beluga"
path = "src/main.rs"

[dependencies]
beluga-core = { workspace = true }
