[package]
name = "beluga-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standalone tools: perft driver and bench."

[[bin]]
name = "perft"
path = "src/perft.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
beluga-core = { workspace = true }
